...
                android:text="@string/switchToManga"
                android:textColor="?android:textColorPrimary"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_lists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_list_icon"
                android:layout_width="48dp"
...
            android:id="@+id/ll_list_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_in_progress_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_blue_selector"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="30dp"
...
                <TextView
                    android:id="@+id/tv_in_progress_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/watching"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_in_progress_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
...

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/completed"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_completed_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
...
                    android:textSize="15sp" />
            </RelativeLayout>

            <View style="@style/StatusItemsSeparator" />

            <RelativeLayout
                android:id="@+id/rl_planned_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_blue_selector"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="30dp"
...
                    android:fontFamily="sans-serif-light"
                    android:text="@string/planToWatch"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_planned_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/zero"
...
