...
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_add_to_my_list"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_button"
                android:text="@string/addToMyList"
                android:textAllCaps="true"
...
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_status"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_button"
                android:textAllCaps="true"
...
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="REWATCHING" />

            <Button
                android:id="@+id/btn_score"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="SCORE: 10" />

            <TextView
                android:id="@+id/tv_episodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="@color/main_light"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_increment_episodes"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
...
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        tools:text="+1V" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_episodes"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/blue_button"
                    android:contentDescription="@string/episodesPopupDescription"
...
