...
    <string name="syncFailedTimeout">Timeout, please check if <u>myanimelist.net</u> is available</string>
    <string name="syncFailedMalDown">Looks like <u>myanimelist.net</u> is down, please check the website</string>
    <string name="updateFailed">Unable to update this title, check your connection or try again later&#8230;</string>
    <string name="updateUnsynchFailed">Unable to update this title, please resynchronize your list&#8230;</string>
    <string name="removingFailed">Unable to remove this title, check your connection or try again later&#8230;</string>
    <string name="addingFailed">Unable to add this title, check your connection or try again later&#8230;</string>
    <string name="removingConfirmation">Do you really want to remove this title from your list?</string>
    <string name="getListFailed">Unable to retrieve your list, check your connection or try again later&#8230;</string>
    <string name="anime_list">Anime List</string>
    <string name="manga_list">Manga List</string>
    <string name="someListIsEmpty">Your \"%s\" list is empty</string>
    <!-- %s - watching/dropped/etc. -->
    <string name="sorting">Sorting</string>
...
    <string name="source">Source</string>
    <string name="dateNotAvailable">Not available</string>
    <string name="adding">Adding</string>
    <string name="removing">Removing</string>
    <string name="detailsLoadingFail">Unable to get title\'s details, check your connection or try again later&#8230;</string>
    <string name="goToWebsiteAnime"><u>View details on MAL</u></string>
    <string name="removeTitleFromList">Remove from list</string>
    <string name="editDetails">Edit Details</string>
    <string name="rateTitle">Rate this title</string>
    <string name="emptySynopsis">No synopsis information has been added to this title.</string>
    <string name="discuss">Discuss</string>
    <string name="copy">Copy</string>
    <string name="serialization">Serialization</string>
    <string name="authors">Authors</string>
    <string name="noneFound">None found</string>
...
    <string name="recentAnime">Recent Anime</string>
    <string name="recentManga">Recent Manga</string>
    <string name="activity">Activity</string>
    <string name="history">History</string>

    <!-- search -->
    <string name="search">Search</string>
    <string name="animeSearch">Anime Search</string>
    <string name="mangaSearch">Manga Search</string>
    <string name="searchFailed">Unable to load data. Please check your connection or try again later&#8230;</string>
    <string name="emptySearchResult">No titles matching your query were found</string>
    <string name="volumesSearchList">Volumes: %s</string>
    <string name="queryIsTooShort">Query must be at least 3 characters long</string>
...
    <string name="unableToAddTitle">Unable to add this title. Please, report it to developer</string>
    <string name="unableToRefreshTitleDetails">Unable to refresh the title\'s details, check your connection or try again later&#8230;</string>

    <string name="copiedToClipboard">Copied to clipboard</string>

    <!-- set as "watching"/"reading"/"completed" dialogs -->
    <string name="setAnimeAsCompleted">You have watched the last episode. Do you want to set this anime as \"Completed\"?</string>
    <string name="setAsWatching">Do you want to set this anime as \"Watching\"?</string>
    <string name="watchedAllEpisodes">You have already watched all episodes</string>
    <string name="readLastChapter">You have already read all chapters</string>
    <string name="readLastVolume">You have already read all volumes</string>
    <string name="setMangaAsCompleted">You have read the last chapter, do you want to set this manga as \"Completed\"?</string>
    <string name="setAsReading">Do you want to set this manga as \"Reading\"?</string>

    <string name="friends__friends">Friends</string>
...
