<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:visibility="invisible"
    tools:visibility="visible">

    <com.g.pocketmal.ui.legacy.widget.BorderCardView
        style="?attr/cardViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:elevation="8dp">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_episodes_label"
                    style="@style/PopupText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="?android:textColorPrimary"
                    tools:text="Episodes" />

                <EditText
                    android:id="@+id/et_episodes_field"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:editTextColor="?android:textColorPrimary"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:padding="8dp"
                    android:selectAllOnFocus="true"
                    android:textSize="16sp"
                    tools:text="9" />

                <TextView
                    android:id="@+id/tv_series_episodes"
                    style="@style/PopupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:textColor="?android:textColorPrimary"
                    tools:text=" / —" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sub_episodes_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sub_episodes_label"
                    style="@style/PopupText"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="?android:textColorPrimary"
                    tools:text="Volumes" />

                <EditText
                    android:id="@+id/et_sub_episodes_field"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:editTextColor="?android:textColorPrimary"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:padding="8dp"
                    android:selectAllOnFocus="true"
                    android:textSize="16sp"
                    tools:text="9" />

                <TextView
                    android:id="@+id/tv_series_sub_episodes"
                    style="@style/PopupText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:textColor="?android:textColorPrimary"
                    tools:text=" / —" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center_vertical"
                    android:text="@string/episodes_popup__not_valid_episodes"
                    android:textColor="@color/error_message"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <ImageButton
                    android:id="@+id/ib_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/blue_button"
                    android:padding="11dp"
                    android:src="@drawable/ic_baseline_done_24"
                    android:text="@string/episodes_popup__update"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="?cardBorderDrawable" />
    </com.g.pocketmal.ui.legacy.widget.BorderCardView>
</FrameLayout>
